# EvalMaxSAT

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
lib/EvalMaxSAT/: CMakeLists.txt
lib/EvalMaxSAT/src/: EvalMaxSAT.h  ParseUtils.h  cadicalinterface.h  card_oe.cpp  card_oe.h  cardincremental.cpp  cardincremental.h  glucoseinterface.h  lazyvariable.cpp  lazyvariable.h  main.cpp  mcqd.cpp  mcqd.h  monglucose41.h  utile.h  virtualcard.cpp  virtualcard.h  virtualmaxsat.h  virtualsat.cpp  virtualsat.h
lib/MaLib/: CMakeLists.txt
lib/MaLib/src/: Chrono.h  View.h  communicationlist.h  coutUtil.h  main.cpp  math.h  rand.h
lib/cadical/: CMakeLists.txt
lib/cadical/src/: assume.cpp  cadical.cpp  cadical.hpp  external.cpp  external.hpp  internal.cpp  internal.hpp  limit.cpp  limit.hpp  lookahead.cpp  mobical.cpp  profile.cpp  profile.hpp  propagate.cpp  solver.cpp  version.cpp
lib/glucose/: CMakeLists.txt  XCMakeLists.txt
lib/glucose/src/glucose/core/: BoundedQueue.h  Solver.cc  Solver.h  SolverStats.h  SolverTypes.h  lcm.cc
lib/glucose/src/glucose/mtl/: Alloc.h  Heap.h  Map.h  Queue.h  Vec.h  VecThreads.h
lib/glucose/src/glucose/parallel/: ClausesBuffer.cc  ClausesBuffer.h  Main.cc  MultiSolvers.cc  MultiSolvers.h  ParallelSolver.cc  ParallelSolver.h  SharedCompanion.cc  SharedCompanion.h  SolverCompanion.cc  SolverCompanion.h  SolverConfiguration.cc
lib/glucose/src/glucose/simp/: Main.cc  SimpSolver.cc  SimpSolver.h  glucose
lib/glucose/src/glucose/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
main/: CMakeLists.txt
main/src/: main.cpp
